--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@ body {
 .table-menu {
     background-color: gray;
 }
-.start, .table-menu {
+.start, .table-menu, .information {
     margin: 0 auto;
     width: 1200px;
 }
